--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-karma": "^2.0.0",
     "grunt-ng-annotate": "^2.0.2",
+    "grunt-wiredep": "^3.0.1",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
     "karma-cli": "^1.0.0",
