--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,6 @@
     "angular-material": "^1.0.9",
     "angular-i18n": "^1.5.6",
     "angular-translate": "^2.11.0",
-    "angular-breadcrumb": "^0.4.1",
-    "material-design-icons": "^2.2.3"
+    "angular-breadcrumb": "^0.4.1"
   }
 }
