--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,9 @@
     "angular-material": "^1.0.9",
     "angular-i18n": "^1.5.6",
     "angular-translate": "^2.11.0",
-    "angular-breadcrumb": "^0.4.1"
+    "angular-breadcrumb": "^0.4.1",
+    "angular-translate-storage-cookie": "^2.11.0",
+    "angular-translate-storage-local": "^2.11.0",
+    "angular-translate-loader-static-files": "^2.11.0"
   }
 }
