Added some functionallity to home view

--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-breadcrumb": "^0.4.1",
     "angular-translate-storage-cookie": "^2.11.0",
     "angular-translate-storage-local": "^2.11.0",
-    "angular-translate-loader-static-files": "^2.11.0"
+    "angular-translate-loader-static-files": "^2.11.0",
+    "angular-sanitize": "^1.5.7"
   }
 }
